# FabScan

./: README
arduino/: FabScanArduinoFirmware.pde
experimental/OpenCV/: CMakeLists.txt  testing.cpp
experimental/OpenCV/camShot/: CMakeLists.txt  camShot.cpp
experimental/OpenCV/text/: CMakeLists.txt
experimental/PCL/: README
experimental/PCL/greedyProjection/: greedy_projection.cpp
experimental/PCL/voxelGrid/: README  voxel_grid.cpp
experimental/pointclouds/whiteCup2/: whiteCup.ply  whiteCup.pts
parts/: LaserHolder.stl  LaserHolder2.scad  LaserHolder2.stl  TurntableHolder2.scad
sources/FabScanMac/: FabScanIcon.icns
sources/FabScanMac/FabScan.xcodeproj/: project.pbxproj
sources/FabScanMac/FabScan.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sources/FabScanMac/FabScan3D/: Distortion.xml  FSBox.cpp  FSBox.h  FSCamera.cpp  FSCamera.h  FSCamera2.h  FSCamera2.mm  FSChessboard.cpp  FSChessboard.h  FSChessboardCalibration.cpp  FSChessboardCalibration.h  FSDefines.h  FSFrame.cpp  FSFrame.h  FSGeometry.h  FSHeaders.h  FSLaser.cpp  FSLaser.h  FSLight.cpp  FSLight.h  FSModel.cpp  FSModel.h  FSObject.cpp  FSObject.h  FSOpenGLView.h  FSOpenGLView.mm  FSPointCloud.cpp  FSPointCloud.h  FSSerial.c  FSSerial.cpp  FSSerial.h  FSSerial2.cpp  FSSerial2.h  FSStepper.cpp  FSStepper.h  FSSurfaceMesh.cpp  FSSurfaceMesh.h  FSTurnTable.cpp  FSTurnTable.h  FSVision.cpp  (+15 more)
sources/FabScanMac/FabScan3D/en.lproj/: MainMenu.xib
sources/FabScanMac/OpenCV.framework/: OpenCV
sources/FabScanMac/OpenCV.framework/Versions/A/Documentation/: faq.htm  index.htm
(+25 files in other folders)
